fix: eliminate all build warnings, migrate Elasticsearch client to ES8
POM model warnings: dedupe parent.version -> project.parent.version across
modules, merge duplicate maven-javadoc-plugin pluginManagement blocks, pin
missing plugin versions (testara-agent, testara-reporter-plugin), widen
shade-plugin resource filters (module-info.class, META-INF/versions/*,
MANIFEST/NOTICE/LICENSE duplicates) in testara-agent-cli/testara-agent-mcp,
and skip the archetype:integration-test goal on the three archetypes since
none define src/test/resources/projects.

Compiler warnings: fix raw-type erasure (Element.root, ProxyInstanceManager/
ProxySteps AbstractProxy) at the source instead of suppressing per-call-site,
move class-level @SuppressWarnings("unchecked") onto engine/session classes
where the warning attaches to a synthesized bridge method (method-level
annotation doesn't reach it), swap @SuppressWarnings("unchecked") for
@SafeVarargs on SetUtils varargs methods, replace deprecated Jackson/JUnit
Platform/plexus APIs (setSerializationInclusion, JsonNode.fields(), Base64,
CloseableResource, Thread.getId(), unused getOutputDirectoryProvider
override), and mark now-superseded overloads @Deprecated instead of
removing them.

Elasticsearch: replace the deprecated RestHighLevelClient (removed upstream
after 7.17) with the ES8 Java API Client (co.elastic.clients:elasticsearch-
java) end to end - client construction, index/get/delete/update/search/count/
cluster-health calls, and sort building. ElasticSearchHelper's public method
names/arities are preserved (including the Gherkin step vocabulary in
ElasticSearchBaseSteps) since mapping "type" no longer exists in ES7+; the
`type`/RequestOptions parameters are now no-ops or dropped where the concept
no longer exists. Test container bumped from ES 7.17 to 8.15. Verified with
a live ES8 Testcontainers run (7/7 tests passing), not just compilation.